<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context="com.example.wolfag.quanlysach.Activities.BookManagerActivity">

    <TableRow>

        <TextView android:text="@string/tv_author_name" />

        <Spinner android:id="@+id/spnAuthor" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/tv_book_name" />

        <EditText android:id="@+id/edtBookName"
            android:ems="10"/>
    </TableRow>

    <TableRow>

        <TextView android:text="@string/tv_publish_date" />

        <EditText android:id="@+id/edtPubishDate"
            android:ems="10"/>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnAddBook"
            android:layout_span="2"
            android:text="@string/btn_add_book" />
    </TableRow>
    <TableRow>
        <ListView
            android:layout_span="2"
            android:id="@+id/lvBook">

        </ListView>
    </TableRow>
</TableLayout>
